gcc/testsuite/gcc.dg/pr41842.c
/* PR c/41842 */
/* { dg-do compile } */

void
f ()
{
  char x[g (h)];	/* { dg-error "undeclared|for each function" } */
}
